--- a/src/component/frontend/TopMenu.scss
+++ b/src/component/frontend/TopMenu.scss
@@ -130,16 +130,6 @@ body {
     }
 }
 
-.topMenuBar, .topMenuBar .p-inputtext, .p-inputtext::placeholder, 
-.p-inputgroup-addon,.p-menuitem-link, .p-menuitem-link .p-menuitem-text,
-.p-menuitem.p-menuitem-active > .p-menuitem-link .p-menuitem-text,
-.p-menubar .p-menuitem >.p-menuitem-link >.p-submenu-icon {
-    transition:0.3s;
-    -webkit-transition:0.3s;
-    -moz-transition:0.3s;
-    transition-delay: .2s;
-}
-
 @media only screen and (max-width: 1575px) {
     body {
         .topMenuBar {
